v/0.5.0/_sources/examples/09_stormcast_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/09_stormcast_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_09_stormcast_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_09_stormcast_example.py:


Running StormCast Inference
===========================

Basic StormCast inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using StormCast. For details about the stormcast model,
see

 - https://arxiv.org/abs/2408.10958

.. GENERATED FROM PYTHON SOURCE LINES 33-38

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 40-44

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 46-55

Thus, we need the following:

- Prognostic Model: Use the built in StormCast Model :py:class:`earth2studio.models.px.StormCast`.
- Datasource: Pull data from the HRRR data api :py:class:`earth2studio.data.HRRR`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

StormCast also requires a conditioning data source. We use a forecast data source here,
GFS_FX :py:class:`earth2studio.data.GFS_FX`, but a non-forecast data source such as ARCO
could also be used with appropriate time stamps.

.. GENERATED FROM PYTHON SOURCE LINES 57-90

.. code-block:: Python

    from datetime import datetime, timedelta

    from loguru import logger
    from tqdm import tqdm

    logger.remove()
    logger.add(lambda msg: tqdm.write(msg, end=""), colorize=True)

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS_FX, HRRR
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import StormCast

    # Load the default model package which downloads the check point from NGC
    package = StormCast.load_default_package()
    model = StormCast.load_model(package)

    # Create the data source
    data = HRRR()

    # Create and set the conditioning data source
    conditioning_data_source = GFS_FX()
    model.conditioning_data_source = conditioning_data_source

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     ╭─▌▌Herbie─────────────────────────────────────────────╮
     │ INFO: Created a default config file.                 │
     │ You may view/edit Herbie's configuration here:       │
     │          /root/.config/herbie/config.toml            │
     ╰──────────────────────────────────────────────────────╯





.. GENERATED FROM PYTHON SOURCE LINES 91-99

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 4 hours

.. GENERATED FROM PYTHON SOURCE LINES 101-110

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 4
    today = datetime.today() - timedelta(days=1)
    date = today.isoformat().split("T")[0]
    io = run.deterministic([date], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-03-27 04:28:55.771 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-03-27 04:28:55.771 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]    Fetching HRRR data:   1%|          | 1/99 [00:01<02:00,  1.23s/it]    Fetching HRRR data:   2%|▏         | 2/99 [00:01<01:31,  1.06it/s]    Fetching HRRR data:   3%|▎         | 3/99 [00:02<01:19,  1.20it/s]    Fetching HRRR data:   4%|▍         | 4/99 [00:03<01:13,  1.29it/s]    Fetching HRRR data:   5%|▌         | 5/99 [00:04<01:13,  1.28it/s]    Fetching HRRR data:   6%|▌         | 6/99 [00:04<01:12,  1.28it/s]    Fetching HRRR data:   7%|▋         | 7/99 [00:05<01:12,  1.27it/s]    Fetching HRRR data:   8%|▊         | 8/99 [00:06<01:11,  1.27it/s]    Fetching HRRR data:   9%|▉         | 9/99 [00:07<01:10,  1.27it/s]    Fetching HRRR data:  10%|█         | 10/99 [00:08<01:10,  1.27it/s]    Fetching HRRR data:  11%|█         | 11/99 [00:08<01:09,  1.27it/s]    Fetching HRRR data:  12%|█▏        | 12/99 [00:09<01:09,  1.26it/s]    Fetching HRRR data:  13%|█▎        | 13/99 [00:10<01:09,  1.24it/s]    Fetching HRRR data:  14%|█▍        | 14/99 [00:11<01:07,  1.25it/s]    Fetching HRRR data:  15%|█▌        | 15/99 [00:12<01:06,  1.26it/s]    Fetching HRRR data:  16%|█▌        | 16/99 [00:12<01:05,  1.27it/s]    Fetching HRRR data:  17%|█▋        | 17/99 [00:13<01:04,  1.27it/s]    Fetching HRRR data:  18%|█▊        | 18/99 [00:14<01:04,  1.26it/s]    Fetching HRRR data:  19%|█▉        | 19/99 [00:15<01:02,  1.27it/s]    Fetching HRRR data:  20%|██        | 20/99 [00:16<01:01,  1.27it/s]    Fetching HRRR data:  21%|██        | 21/99 [00:16<01:01,  1.28it/s]    Fetching HRRR data:  22%|██▏       | 22/99 [00:17<01:01,  1.26it/s]    Fetching HRRR data:  23%|██▎       | 23/99 [00:18<01:00,  1.26it/s]    Fetching HRRR data:  24%|██▍       | 24/99 [00:19<00:59,  1.27it/s]    Fetching HRRR data:  25%|██▌       | 25/99 [00:19<00:57,  1.28it/s]    Fetching HRRR data:  26%|██▋       | 26/99 [00:20<00:56,  1.28it/s]    Fetching HRRR data:  27%|██▋       | 27/99 [00:21<00:56,  1.28it/s]    Fetching HRRR data:  28%|██▊       | 28/99 [00:22<00:55,  1.28it/s]    Fetching HRRR data:  29%|██▉       | 29/99 [00:23<00:54,  1.28it/s]    Fetching HRRR data:  30%|███       | 30/99 [00:23<00:53,  1.28it/s]    Fetching HRRR data:  31%|███▏      | 31/99 [00:24<00:52,  1.29it/s]    Fetching HRRR data:  32%|███▏      | 32/99 [00:25<00:51,  1.30it/s]    Fetching HRRR data:  33%|███▎      | 33/99 [00:26<00:50,  1.31it/s]    Fetching HRRR data:  34%|███▍      | 34/99 [00:26<00:49,  1.30it/s]    Fetching HRRR data:  35%|███▌      | 35/99 [00:27<00:48,  1.31it/s]    Fetching HRRR data:  36%|███▋      | 36/99 [00:28<00:47,  1.31it/s]    Fetching HRRR data:  37%|███▋      | 37/99 [00:29<00:47,  1.30it/s]    Fetching HRRR data:  38%|███▊      | 38/99 [00:29<00:46,  1.30it/s]    Fetching HRRR data:  39%|███▉      | 39/99 [00:30<00:46,  1.28it/s]    Fetching HRRR data:  40%|████      | 40/99 [00:31<00:46,  1.27it/s]    Fetching HRRR data:  41%|████▏     | 41/99 [00:32<00:45,  1.27it/s]    Fetching HRRR data:  42%|████▏     | 42/99 [00:33<00:45,  1.25it/s]    Fetching HRRR data:  43%|████▎     | 43/99 [00:33<00:44,  1.26it/s]    Fetching HRRR data:  44%|████▍     | 44/99 [00:34<00:43,  1.26it/s]    Fetching HRRR data:  45%|████▌     | 45/99 [00:35<00:42,  1.26it/s]    Fetching HRRR data:  46%|████▋     | 46/99 [00:36<00:41,  1.26it/s]    Fetching HRRR data:  47%|████▋     | 47/99 [00:37<00:41,  1.27it/s]    Fetching HRRR data:  48%|████▊     | 48/99 [00:37<00:39,  1.28it/s]    Fetching HRRR data:  49%|████▉     | 49/99 [00:38<00:39,  1.28it/s]    Fetching HRRR data:  51%|█████     | 50/99 [00:39<00:37,  1.29it/s]    Fetching HRRR data:  52%|█████▏    | 51/99 [00:40<00:36,  1.31it/s]    Fetching HRRR data:  53%|█████▎    | 52/99 [00:40<00:36,  1.29it/s]    Fetching HRRR data:  54%|█████▎    | 53/99 [00:41<00:35,  1.30it/s]    Fetching HRRR data:  55%|█████▍    | 54/99 [00:42<00:35,  1.28it/s]    Fetching HRRR data:  56%|█████▌    | 55/99 [00:43<00:34,  1.28it/s]    Fetching HRRR data:  57%|█████▋    | 56/99 [00:44<00:34,  1.24it/s]    Fetching HRRR data:  58%|█████▊    | 57/99 [00:44<00:33,  1.26it/s]    Fetching HRRR data:  59%|█████▊    | 58/99 [00:45<00:32,  1.27it/s]    Fetching HRRR data:  60%|█████▉    | 59/99 [00:46<00:31,  1.28it/s]    Fetching HRRR data:  61%|██████    | 60/99 [00:47<00:30,  1.29it/s]    Fetching HRRR data:  62%|██████▏   | 61/99 [00:48<00:29,  1.29it/s]    Fetching HRRR data:  63%|██████▎   | 62/99 [00:48<00:28,  1.28it/s]    Fetching HRRR data:  64%|██████▎   | 63/99 [00:49<00:28,  1.28it/s]    Fetching HRRR data:  65%|██████▍   | 64/99 [00:50<00:27,  1.27it/s]    Fetching HRRR data:  66%|██████▌   | 65/99 [00:51<00:26,  1.28it/s]    Fetching HRRR data:  67%|██████▋   | 66/99 [00:51<00:25,  1.28it/s]    Fetching HRRR data:  68%|██████▊   | 67/99 [00:52<00:24,  1.29it/s]    Fetching HRRR data:  69%|██████▊   | 68/99 [00:53<00:24,  1.28it/s]    Fetching HRRR data:  70%|██████▉   | 69/99 [00:54<00:23,  1.28it/s]    Fetching HRRR data:  71%|███████   | 70/99 [00:55<00:22,  1.27it/s]    Fetching HRRR data:  72%|███████▏  | 71/99 [00:55<00:22,  1.26it/s]    Fetching HRRR data:  73%|███████▎  | 72/99 [00:56<00:21,  1.26it/s]    Fetching HRRR data:  74%|███████▎  | 73/99 [00:57<00:20,  1.24it/s]    Fetching HRRR data:  75%|███████▍  | 74/99 [00:58<00:20,  1.25it/s]    Fetching HRRR data:  76%|███████▌  | 75/99 [00:59<00:19,  1.24it/s]    Fetching HRRR data:  77%|███████▋  | 76/99 [00:59<00:18,  1.25it/s]    Fetching HRRR data:  78%|███████▊  | 77/99 [01:00<00:18,  1.19it/s]    Fetching HRRR data:  79%|███████▉  | 78/99 [01:01<00:17,  1.22it/s]    Fetching HRRR data:  80%|███████▉  | 79/99 [01:02<00:16,  1.24it/s]    Fetching HRRR data:  81%|████████  | 80/99 [01:03<00:15,  1.24it/s]    Fetching HRRR data:  82%|████████▏ | 81/99 [01:04<00:14,  1.24it/s]    Fetching HRRR data:  83%|████████▎ | 82/99 [01:04<00:13,  1.24it/s]    Fetching HRRR data:  84%|████████▍ | 83/99 [01:05<00:12,  1.24it/s]    Fetching HRRR data:  85%|████████▍ | 84/99 [01:06<00:11,  1.25it/s]    Fetching HRRR data:  86%|████████▌ | 85/99 [01:07<00:11,  1.26it/s]    Fetching HRRR data:  87%|████████▋ | 86/99 [01:07<00:10,  1.26it/s]    Fetching HRRR data:  88%|████████▊ | 87/99 [01:08<00:09,  1.25it/s]    Fetching HRRR data:  89%|████████▉ | 88/99 [01:09<00:08,  1.25it/s]    Fetching HRRR data:  90%|████████▉ | 89/99 [01:10<00:08,  1.25it/s]    Fetching HRRR data:  91%|█████████ | 90/99 [01:11<00:07,  1.25it/s]    Fetching HRRR data:  92%|█████████▏| 91/99 [01:11<00:06,  1.25it/s]    Fetching HRRR data:  93%|█████████▎| 92/99 [01:12<00:05,  1.25it/s]    Fetching HRRR data:  94%|█████████▍| 93/99 [01:13<00:04,  1.25it/s]    Fetching HRRR data:  95%|█████████▍| 94/99 [01:14<00:03,  1.26it/s]    Fetching HRRR data:  96%|█████████▌| 95/99 [01:15<00:03,  1.26it/s]    Fetching HRRR data:  97%|█████████▋| 96/99 [01:15<00:02,  1.26it/s]    Fetching HRRR data:  98%|█████████▊| 97/99 [01:16<00:01,  1.26it/s]    Fetching HRRR data:  99%|█████████▉| 98/99 [01:17<00:00,  1.26it/s]    Fetching HRRR data: 100%|██████████| 99/99 [01:18<00:00,  1.30it/s]    Fetching HRRR data: 100%|██████████| 99/99 [01:18<00:00,  1.26it/s]
    2025-03-27 04:30:58.725 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from HRRR
    2025-03-27 04:30:58.824 | INFO     | earth2studio.run:deterministic:136 - Inference starting!
    Running inference:   0%|          | 0/5 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]                                                                    2025-03-27 04:30:59.584 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:214 - Fetching GFS index file: 2025-03-26 00:00:00 lead 0:00:00
    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-03-27 04:30:59.604 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u10m at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]
                                                                                                                                                    2025-03-27 04:30:59.663 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v10m at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.59it/s]
                                                                                                                                                            2025-03-27 04:30:59.724 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t2m at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.59it/s]    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]
                                                                                                                                                            2025-03-27 04:30:59.767 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: tcwv at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.59it/s]    Running inference:  20%|██        | 1/5 [00:00<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.96it/s]
                                                                                                                                                            2025-03-27 04:30:59.841 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: msl at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.96it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                            2025-03-27 04:30:59.906 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: sp at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.96it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 14.82it/s]
                                                                                                                                                            2025-03-27 04:30:59.996 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u1000 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 14.82it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                            2025-03-27 04:31:00.052 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u850 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 14.82it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 15.82it/s]
                                                                                                                                                            2025-03-27 04:31:00.109 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u500 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 15.82it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                            2025-03-27 04:31:00.172 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u250 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 15.82it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.33it/s]
                                                                                                                                                             2025-03-27 04:31:00.225 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v1000 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.33it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.291 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v850 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.33it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 16.03it/s]
                                                                                                                                                             2025-03-27 04:31:00.354 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v500 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 16.03it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.409 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v250 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 16.03it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.453 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z1000 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 16.03it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 16.63it/s]
                                                                                                                                                             2025-03-27 04:31:00.525 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z850 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 16.63it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.583 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z500 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 16.63it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 17.26it/s]
                                                                                                                                                             2025-03-27 04:31:00.630 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z250 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 17.26it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.686 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t1000 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 17.26it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.43it/s]
                                                                                                                                                             2025-03-27 04:31:00.742 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t850 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.43it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.814 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t500 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.43it/s]    Running inference:  20%|██        | 1/5 [00:01<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 16.99it/s]
                                                                                                                                                             2025-03-27 04:31:00.867 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t250 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 16.99it/s]    Running inference:  20%|██        | 1/5 [00:02<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:00.922 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q1000 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 16.99it/s]    Running inference:  20%|██        | 1/5 [00:02<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 16.89it/s]
                                                                                                                                                             2025-03-27 04:31:00.987 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q850 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 16.89it/s]    Running inference:  20%|██        | 1/5 [00:02<00:03,  1.32it/s]
                                                                                                                                                             2025-03-27 04:31:01.055 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q500 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 16.89it/s]    Running inference:  20%|██        | 1/5 [00:02<00:03,  1.32it/s]
    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 16.41it/s]
                                                                                                                                                             2025-03-27 04:31:01.117 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q250 at 2025-03-26 00:00:00_0:00:00

    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 16.41it/s]    Running inference:  20%|██        | 1/5 [00:02<00:03,  1.32it/s]    Fetching GFS for 2025-03-26 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 16.49it/s]
    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]                                                                    2025-03-27 04:31:09.472 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:214 - Fetching GFS index file: 2025-03-26 00:00:00 lead 1:00:00
    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-03-27 04:31:09.493 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u10m at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
                                                                                                                                                    2025-03-27 04:31:09.558 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v10m at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.70it/s]
                                                                                                                                                            2025-03-27 04:31:09.613 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t2m at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.70it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
                                                                                                                                                            2025-03-27 04:31:09.670 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: tcwv at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 16.70it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.62it/s]
                                                                                                                                                            2025-03-27 04:31:09.734 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: msl at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.62it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
                                                                                                                                                            2025-03-27 04:31:09.792 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: sp at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 16.62it/s]    Running inference:  40%|████      | 2/5 [00:10<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.36it/s]
                                                                                                                                                            2025-03-27 04:31:09.858 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u1000 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.36it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                            2025-03-27 04:31:09.917 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u850 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.36it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.49it/s]
                                                                                                                                                            2025-03-27 04:31:09.978 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u500 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.49it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                            2025-03-27 04:31:10.033 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u250 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.49it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.87it/s]
                                                                                                                                                             2025-03-27 04:31:10.092 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v1000 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.142 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v850 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.29it/s]
                                                                                                                                                             2025-03-27 04:31:10.202 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v500 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.29it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.254 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v250 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.29it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  54%|█████▍    | 14/26 [00:00<00:00, 17.98it/s]
                                                                                                                                                             2025-03-27 04:31:10.304 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z1000 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  54%|█████▍    | 14/26 [00:00<00:00, 17.98it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.367 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z850 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  54%|█████▍    | 14/26 [00:00<00:00, 17.98it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  62%|██████▏   | 16/26 [00:00<00:00, 17.60it/s]
                                                                                                                                                             2025-03-27 04:31:10.423 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z500 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  62%|██████▏   | 16/26 [00:00<00:00, 17.60it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.489 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z250 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  62%|██████▏   | 16/26 [00:00<00:00, 17.60it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  69%|██████▉   | 18/26 [00:01<00:00, 17.31it/s]
                                                                                                                                                             2025-03-27 04:31:10.543 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t1000 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  69%|██████▉   | 18/26 [00:01<00:00, 17.31it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.603 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t850 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  69%|██████▉   | 18/26 [00:01<00:00, 17.31it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 16.87it/s]
                                                                                                                                                             2025-03-27 04:31:10.668 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t500 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.717 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t250 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.766 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q1000 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:11<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.67it/s]
                                                                                                                                                             2025-03-27 04:31:10.825 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q850 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.67it/s]    Running inference:  40%|████      | 2/5 [00:12<00:18,  6.13s/it]
                                                                                                                                                             2025-03-27 04:31:10.888 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q500 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.67it/s]    Running inference:  40%|████      | 2/5 [00:12<00:18,  6.13s/it]
    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 16.87it/s]
                                                                                                                                                             2025-03-27 04:31:10.958 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q250 at 2025-03-26 00:00:00_1:00:00

    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 16.87it/s]    Running inference:  40%|████      | 2/5 [00:12<00:18,  6.13s/it]    Fetching GFS for 2025-03-26 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 17.00it/s]
    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]                                                                    2025-03-27 04:31:19.298 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:214 - Fetching GFS index file: 2025-03-26 00:00:00 lead 2:00:00
    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-03-27 04:31:19.320 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u10m at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
                                                                                                                                                    2025-03-27 04:31:19.374 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v10m at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.91it/s]
                                                                                                                                                            2025-03-27 04:31:19.432 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t2m at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.91it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
                                                                                                                                                            2025-03-27 04:31:19.481 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: tcwv at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.91it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.53it/s]
                                                                                                                                                            2025-03-27 04:31:19.547 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: msl at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.53it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
                                                                                                                                                            2025-03-27 04:31:19.615 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: sp at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.53it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.10it/s]
                                                                                                                                                            2025-03-27 04:31:19.684 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u1000 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.10it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
                                                                                                                                                            2025-03-27 04:31:19.734 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u850 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.10it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.96it/s]
                                                                                                                                                            2025-03-27 04:31:19.792 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u500 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.96it/s]    Running inference:  60%|██████    | 3/5 [00:20<00:15,  7.82s/it]
                                                                                                                                                            2025-03-27 04:31:19.845 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u250 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.96it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.75it/s]
                                                                                                                                                             2025-03-27 04:31:19.895 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v1000 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.75it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:19.953 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v850 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.75it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.78it/s]
                                                                                                                                                             2025-03-27 04:31:20.008 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v500 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.78it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.064 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v250 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.78it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.102 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z1000 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.78it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.26it/s]
                                                                                                                                                             2025-03-27 04:31:20.166 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z850 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.26it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.226 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z500 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.26it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 17.71it/s]
                                                                                                                                                             2025-03-27 04:31:20.287 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z250 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 17.71it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.330 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t1000 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 17.71it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 18.32it/s]
                                                                                                                                                             2025-03-27 04:31:20.387 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t850 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 18.32it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.448 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t500 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 18.32it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.83it/s]
                                                                                                                                                             2025-03-27 04:31:20.507 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t250 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.83it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.561 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q1000 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.83it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.61it/s]
                                                                                                                                                             2025-03-27 04:31:20.623 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q850 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.61it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
                                                                                                                                                             2025-03-27 04:31:20.680 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q500 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.61it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]
    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 17.39it/s]
                                                                                                                                                             2025-03-27 04:31:20.742 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q250 at 2025-03-26 00:00:00_2:00:00

    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 17.39it/s]    Running inference:  60%|██████    | 3/5 [00:21<00:15,  7.82s/it]    Fetching GFS for 2025-03-26 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 17.44it/s]
    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]                                                                    2025-03-27 04:31:29.203 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:214 - Fetching GFS index file: 2025-03-26 00:00:00 lead 3:00:00
    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-03-27 04:31:29.221 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u10m at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                    2025-03-27 04:31:29.280 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v10m at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.82it/s]
                                                                                                                                                            2025-03-27 04:31:29.333 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t2m at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.82it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                            2025-03-27 04:31:29.384 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: tcwv at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:   8%|▊         | 2/26 [00:00<00:01, 17.82it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.94it/s]
                                                                                                                                                            2025-03-27 04:31:29.444 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: msl at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.94it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                            2025-03-27 04:31:29.525 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: sp at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  15%|█▌        | 4/26 [00:00<00:01, 17.94it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.20it/s]
                                                                                                                                                            2025-03-27 04:31:29.582 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u1000 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.20it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                            2025-03-27 04:31:29.638 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u850 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  23%|██▎       | 6/26 [00:00<00:01, 16.20it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.53it/s]
                                                                                                                                                            2025-03-27 04:31:29.699 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u500 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.53it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                            2025-03-27 04:31:29.752 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u250 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  31%|███       | 8/26 [00:00<00:01, 16.53it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.63it/s]
                                                                                                                                                             2025-03-27 04:31:29.799 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v1000 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.63it/s]    Running inference:  80%|████████  | 4/5 [00:30<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:29.862 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v850 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  38%|███▊      | 10/26 [00:00<00:00, 17.63it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.45it/s]
                                                                                                                                                             2025-03-27 04:31:29.916 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v500 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.45it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:29.965 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v250 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.45it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.009 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z1000 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 17.45it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.41it/s]
                                                                                                                                                             2025-03-27 04:31:30.066 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z850 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.41it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.139 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z500 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  58%|█████▊    | 15/26 [00:00<00:00, 18.41it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 17.35it/s]
                                                                                                                                                             2025-03-27 04:31:30.198 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z250 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 17.35it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.249 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t1000 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 17.35it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.68it/s]
                                                                                                                                                             2025-03-27 04:31:30.306 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t850 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.68it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.360 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t500 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  73%|███████▎  | 19/26 [00:01<00:00, 17.68it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.75it/s]
                                                                                                                                                             2025-03-27 04:31:30.418 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t250 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.75it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.465 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q1000 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  81%|████████  | 21/26 [00:01<00:00, 17.75it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.66it/s]
                                                                                                                                                             2025-03-27 04:31:30.532 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q850 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.66it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
                                                                                                                                                             2025-03-27 04:31:30.603 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q500 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 17.66it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]
    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 17.11it/s]
                                                                                                                                                             2025-03-27 04:31:30.658 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: q250 at 2025-03-26 00:00:00_3:00:00

    Fetching GFS for 2025-03-26 00:00:00:  96%|█████████▌| 25/26 [00:01<00:00, 17.11it/s]    Running inference:  80%|████████  | 4/5 [00:31<00:08,  8.64s/it]    Fetching GFS for 2025-03-26 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 17.41it/s]
    Running inference: 100%|██████████| 5/5 [00:40<00:00,  9.08s/it]    Running inference: 100%|██████████| 5/5 [00:40<00:00,  8.05s/it]
    2025-03-27 04:31:39.058 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
     ├── Z10hl (1, 5, 512, 640) float32
     ├── Z11hl (1, 5, 512, 640) float32
     ├── Z13hl (1, 5, 512, 640) float32
     ├── Z15hl (1, 5, 512, 640) float32
     ├── Z1hl (1, 5, 512, 640) float32
     ├── Z20hl (1, 5, 512, 640) float32
     ├── Z25hl (1, 5, 512, 640) float32
     ├── Z2hl (1, 5, 512, 640) float32
     ├── Z30hl (1, 5, 512, 640) float32
     ├── Z3hl (1, 5, 512, 640) float32
     ├── Z4hl (1, 5, 512, 640) float32
     ├── Z5hl (1, 5, 512, 640) float32
     ├── Z6hl (1, 5, 512, 640) float32
     ├── Z7hl (1, 5, 512, 640) float32
     ├── Z8hl (1, 5, 512, 640) float32
     ├── Z9hl (1, 5, 512, 640) float32
     ├── ilat (512,) int64
     ├── ilon (640,) int64
     ├── lat (512, 640) float32
     ├── lead_time (5,) timedelta64[h]
     ├── lon (512, 640) float32
     ├── mslp (1, 5, 512, 640) float32
     ├── p10hl (1, 5, 512, 640) float32
     ├── p11hl (1, 5, 512, 640) float32
     ├── p13hl (1, 5, 512, 640) float32
     ├── p15hl (1, 5, 512, 640) float32
     ├── p1hl (1, 5, 512, 640) float32
     ├── p20hl (1, 5, 512, 640) float32
     ├── p2hl (1, 5, 512, 640) float32
     ├── p3hl (1, 5, 512, 640) float32
     ├── p4hl (1, 5, 512, 640) float32
     ├── p5hl (1, 5, 512, 640) float32
     ├── p6hl (1, 5, 512, 640) float32
     ├── p7hl (1, 5, 512, 640) float32
     ├── p8hl (1, 5, 512, 640) float32
     ├── p9hl (1, 5, 512, 640) float32
     ├── q10hl (1, 5, 512, 640) float32
     ├── q11hl (1, 5, 512, 640) float32
     ├── q13hl (1, 5, 512, 640) float32
     ├── q15hl (1, 5, 512, 640) float32
     ├── q1hl (1, 5, 512, 640) float32
     ├── q20hl (1, 5, 512, 640) float32
     ├── q25hl (1, 5, 512, 640) float32
     ├── q2hl (1, 5, 512, 640) float32
     ├── q30hl (1, 5, 512, 640) float32
     ├── q3hl (1, 5, 512, 640) float32
     ├── q4hl (1, 5, 512, 640) float32
     ├── q5hl (1, 5, 512, 640) float32
     ├── q6hl (1, 5, 512, 640) float32
     ├── q7hl (1, 5, 512, 640) float32
     ├── q8hl (1, 5, 512, 640) float32
     ├── q9hl (1, 5, 512, 640) float32
     ├── refc (1, 5, 512, 640) float32
     ├── t10hl (1, 5, 512, 640) float32
     ├── t11hl (1, 5, 512, 640) float32
     ├── t13hl (1, 5, 512, 640) float32
     ├── t15hl (1, 5, 512, 640) float32
     ├── t1hl (1, 5, 512, 640) float32
     ├── t20hl (1, 5, 512, 640) float32
     ├── t25hl (1, 5, 512, 640) float32
     ├── t2hl (1, 5, 512, 640) float32
     ├── t2m (1, 5, 512, 640) float32
     ├── t30hl (1, 5, 512, 640) float32
     ├── t3hl (1, 5, 512, 640) float32
     ├── t4hl (1, 5, 512, 640) float32
     ├── t5hl (1, 5, 512, 640) float32
     ├── t6hl (1, 5, 512, 640) float32
     ├── t7hl (1, 5, 512, 640) float32
     ├── t8hl (1, 5, 512, 640) float32
     ├── t9hl (1, 5, 512, 640) float32
     ├── time (1,) datetime64[ns]
     ├── u10hl (1, 5, 512, 640) float32
     ├── u10m (1, 5, 512, 640) float32
     ├── u11hl (1, 5, 512, 640) float32
     ├── u13hl (1, 5, 512, 640) float32
     ├── u15hl (1, 5, 512, 640) float32
     ├── u1hl (1, 5, 512, 640) float32
     ├── u20hl (1, 5, 512, 640) float32
     ├── u25hl (1, 5, 512, 640) float32
     ├── u2hl (1, 5, 512, 640) float32
     ├── u30hl (1, 5, 512, 640) float32
     ├── u3hl (1, 5, 512, 640) float32
     ├── u4hl (1, 5, 512, 640) float32
     ├── u5hl (1, 5, 512, 640) float32
     ├── u6hl (1, 5, 512, 640) float32
     ├── u7hl (1, 5, 512, 640) float32
     ├── u8hl (1, 5, 512, 640) float32
     ├── u9hl (1, 5, 512, 640) float32
     ├── v10hl (1, 5, 512, 640) float32
     ├── v10m (1, 5, 512, 640) float32
     ├── v11hl (1, 5, 512, 640) float32
     ├── v13hl (1, 5, 512, 640) float32
     ├── v15hl (1, 5, 512, 640) float32
     ├── v1hl (1, 5, 512, 640) float32
     ├── v20hl (1, 5, 512, 640) float32
     ├── v25hl (1, 5, 512, 640) float32
     ├── v2hl (1, 5, 512, 640) float32
     ├── v30hl (1, 5, 512, 640) float32
     ├── v3hl (1, 5, 512, 640) float32
     ├── v4hl (1, 5, 512, 640) float32
     ├── v5hl (1, 5, 512, 640) float32
     ├── v6hl (1, 5, 512, 640) float32
     ├── v7hl (1, 5, 512, 640) float32
     ├── v8hl (1, 5, 512, 640) float32
     └── v9hl (1, 5, 512, 640) float32




.. GENERATED FROM PYTHON SOURCE LINES 111-118

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 4 hours into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 120-162

.. code-block:: Python

    import cartopy
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = f"{date}"
    variable = "t2m"
    step = 4  # lead time = 1 hr

    plt.close("all")

    # Create a correct Lambert Conformal projection
    projection = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set state lines
    ax.add_feature(
        cartopy.feature.STATES.with_scale("50m"), linewidth=0.5, edgecolor="black", zorder=2
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig(f"outputs/09_{date}_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_09_stormcast_example_001.png
   :alt: 2025-03-26 - Lead time: 4hrs
   :srcset: /examples/images/sphx_glr_09_stormcast_example_001.png, /examples/images/sphx_glr_09_stormcast_example_001_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 50.850 seconds)


.. _sphx_glr_download_examples_09_stormcast_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 09_stormcast_example.ipynb <09_stormcast_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 09_stormcast_example.py <09_stormcast_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 09_stormcast_example.zip <09_stormcast_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
